<resources>
    <string name="app_name">In And Out</string>
    <string name="order_query">Place an Order</string>
    <string name="double_double">Double Double: </string>
    <string name="cheeseburger">Cheeseburger: </string>
    <string name="french_fries">French Fries: </string>
    <string name="shakes">Shakes: </string>
    <string name="fountain_drinks">Fountain Drinks (pick size)</string>
    <string name="drink_small">Small: </string>
    <string name="drink_medium">Medium: </string>
    <string name="drink_large">Large: </string>
    <string name="place_order">Place Order</string>

    <string name="order_total">Order Total:</string>
    <string name="items_ordered">Items Ordered: </string>
    <string name="subtotal">Subtotal: </string>
    <string name="tax">Tax (8%): </string>
    <string name="start_new_order">Start New Order</string>
</resources>
