<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.dkim127.inandout.SummaryActivity"
    android:columnCount="2"
    android:background="@drawable/summary_background"
    android:rowCount="8">

    <Space
        android:layout_width="1dp"
        android:layout_height="80dp"
        android:layout_row="0"
        android:layout_column="0"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/order_total"
        android:id="@+id/orderTotalTextView"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnSpan="1"
        />

    <Space
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:layout_row="2"
        android:layout_column="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/items_ordered"
        android:id="@+id/itemsOrderedTextView"
        android:layout_row="3"
        android:layout_column="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/subtotal"
        android:id="@+id/subtotalTextView"
        android:layout_row="4"
        android:layout_column="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tax"
        android:id="@+id/taxTextView"
        android:layout_row="5"
        android:layout_column="0"/>

    <Space
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:layout_row="6"
        android:layout_column="0"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_new_order"
        android:id="@+id/startNewOrderButton"
        android:layout_row="7"
        android:layout_column="0"
        android:onClick="endCurrentIntent"/>
</GridLayout>
